# daft-embedded

./: .gitignore  CMakeLists.txt  README.md  format.sh
.devcontainer/: devcontainer.json
include/: checks.h  i2c_driver.h
src/: checks.c  i2c_driver.c  main.c
